# email-sender

./: .gitignore  .replit  LICENSE  README.md  app.py  models.py  pyproject.toml
.github/workflows/: codeql.yml
scripts/: post-merge.sh
static/: app.js  campaign.js  style.css
templates/: base.html  campaign_detail.html  campaign_new.html  dashboard.html  forgot_password.html  help.html  homepage.html  index.html  login.html  pricing.html  register.html  reset_password.html  scheduled.html  settings.html  tutorial.html
