[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cryptography>=48.0.1",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "gunicorn>=26.0.0",
    "openai>=2.41.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.0",
    "python-docx>=1.0.0",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "stripe>=15.2.0",
]
